--- a/package.json
+++ b/package.json
@@ -6,23 +6,25 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.84.1",
+    "framer-motion": "^11.16.4",
+    "lucide-react": "^0.475.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.26.0",
-    "framer-motion": "^11.16.4",
-    "three": "^0.171.0",
-    "lucide-react": "^0.475.0",
-    "@tanstack/react-query": "^5.84.1"
+    "three": "^0.171.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.4",
-    "vite": "^6.1.0",
-    "tailwindcss": "^3.4.17",
     "autoprefixer": "^10.4.20",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.5.3",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss": "^3.4.17",
+    "tailwindcss-animate": "^1.0.7",
+    "vite": "^6.1.0"
   }
 }
